Fri Mar 11 18:05:29 2005  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_arpa_inet.cpp (inet_aton): Windows Server 2003 changed
	  the behavior of inet_addr() when given a zero-length name. Change
	  zero-length names to " " (1 space) to restore the old behavior and
	  match other platforms' behavior.

Fri Mar  11 18:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/modules/BorlandWorkspaceCreator.pm:
          Add -$(MAKEFLAGS) to the makerules

Fri Mar  11 11:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Logging/Use_Multiple_Sinks.cpp:
        * examples/APG/Logging/Use_Ostream.cpp:
        * examples/APG/Logging/LogManager.h:
          Changed _MSC_VER checks

Fri Mar  11 10:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc.h:
          Added fuzz disable for check_for_msc_ver

        * bin/fuzz.pl:
          Lowered the level for the _MSC_VER check to level 3. This is for
          checking if we don't check _MSC_VER >= 1200. This is the checking
          for msvc 6 or newer and that is the minimum we support. A lof of
          files are updated yesterday, this fuzz check is to detect the last
          and to detect newer commits that have this check

Fri Mar  11 10:43:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
	  Added additional cleanup target for VxWorks builds.

Thu Mar 10 17:28:38 2005  Steve Huston  <shuston@riverace.com>

	* examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
	* examples/C++NPv2/AIO_Client_Logging_Daemon.cpp:
	* examples/C++NPv2/TPC_Logging_Server.cpp: Only dynamic_cast a
	  ACE_HANDLE to int when not on ACE_WIN32. Else there's a risk of
	  compile errors, such as from HP aC++ that a dynamic_cast from
	  int to int is illegal.

Wed Mar  9 21:59:24 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/Time_Value.inl (ACE_Time_Value): Moved the definition of