@@ -1962,6 +1962,7 @@ Ming Xiong <xiongm at isis dot vanderbilt dot edu>
 James Hill <jhill at isis dot vanderbilt dot edu>
 Stoyan Paunov <spaunov at isis dot vanderbilt dot edu>
 Sean Parker <supinlick at yahoo dot com>
+Mark Wilson <mwil at lle dot rochester dot edu>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
