@@ -126,6 +126,15 @@ typedef void *ACE_MALLOC_T;
 #      else
 #        include /**/ <new>
 #        define ACE_bad_alloc std::bad_alloc
+#        if defined (ACE_HAS_NEW_NOTHROW)
+#          if defined (ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB)
+#            define ACE_nothrow   std::nothrow
+#            define ACE_nothrow_t std::nothrow_t
+#          else
+#            define ACE_nothrow   nothrow
+#            define ACE_nothrow_t nothrow_t
+#          endif /* ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB */
+#        endif /* ACE_HAS_NEW_NOTHROW */
 #        define ACE_throw_bad_alloc throw ACE_bad_alloc ()
 #      endif /* __SUNPRO_CC < 0x500 */
 #  elif defined (ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB)
